# pydantic-settings-op

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mise.toml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
scripts/: release.sh  setup-ci-secret.sh  setup-test-vault.sh
src/pydantic_settings_op/: __init__.py
tests/: conftest.py  test_environment_source.py  test_pydantic_settings_op.py  test_vault_source.py
